# amuco

./: .mcp.json  next.config.ts  package-lock.json  package.json
M2M Annual Charity Golf Day/: .env.example  .gitignore  README.md  docker-compose.yml
M2M Annual Charity Golf Day/.github/: copilot-instructions.md
M2M Annual Charity Golf Day/backend/: pyproject.toml
M2M Annual Charity Golf Day/backend/app/: __init__.py  main.py
M2M Annual Charity Golf Day/backend/app/api/: health.py
M2M Annual Charity Golf Day/backend/app/core/: config.py
M2M Annual Charity Golf Day/backend/app/services/: health.py
M2M Annual Charity Golf Day/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
M2M Annual Charity Golf Day/frontend/src/: App.tsx  index.css  main.tsx
M2M Annual Charity Golf Day/frontend/src/components/: AppShell.tsx  HelpPage.tsx  InfoPage.tsx  LandingPage.tsx  PopiaPage.tsx
M2M Annual Charity Golf Day/frontend/src/lib/: supabase.ts
M2M Annual Charity Golf Day/supabase/: config.toml
M2M Annual Charity Golf Day/supabase/migrations/: 0001_init.sql  20260709122927_event_day_summary.sql
app/: globals.css  layout.js  page.js
app/admin/: page.js
app/admin/dashboard/: page.js
app/api/admin/login/: route.js
app/api/admin/stats/: route.js
app/api/survey/: route.js
app/results/: page.js
lib/: locations.js
